build the arrow link component.

--- a/index.html
+++ b/index.html
@@ -14,12 +14,6 @@
     <link rel="stylesheet" href="css/styles.css" />
   </head>
   <body>
-    <h1>Heading 1</h1>
-    <h2>Heading 2</h2>
-    <h3>Heading 3</h3>
-    <p>
-      Lorem ipsum, dolor sit amet consectetur adipisicing elit. At ab libero
-      officiis aliquam sed recusandae doloribus a laudantium amet architecto.
-    </p>
+  <a href="#" class="Link-arrow">Learn More</a>
   </body>
 </html>
