--- a/index.html
+++ b/index.html
@@ -16,5 +16,15 @@
   <body>
   <a href="#" class="Link-arrow">Learn More</a>
   <span class="badge badge--primary badge--small">10% Off</span>
+  <ul class="list list--inline">
+    <li class="list--item">Item 1</li>
+    <li class="list--item">Item 2</li>
+    <li class="list--item">Item 3</li>
+  </ul>
+  <ul class="list list--tick">
+    <li class="list--item">Item 1</li>
+    <li class="list--item">Item 2</li>
+    <li class="list--item">Item 3</li>
+  </ul>
   </body>
 </html>
