--- a/index.html
+++ b/index.html
@@ -26,5 +26,10 @@
     <li class="list--item">Item 2</li>
     <li class="list--item">Item 3</li>
   </ul>
+  <span class="icon-container">
+    <svg class="icon icon--primary">
+      <use xlink:href="images/sprite.svg#computer"></use>
+    </svg>
+  </span>
   </body>
 </html>
