Define button components.

--- a/index.html
+++ b/index.html
@@ -31,5 +31,7 @@
       <use xlink:href="images/sprite.svg#computer"></use>
     </svg>
   </span>
+  <button class="btn btn--primary btn--block">Buy now</button>
+  <a href="#" class="btn btn--secondary btn--block">Buy now</a>
   </body>
 </html>
