Define input components.

--- a/index.html
+++ b/index.html
@@ -33,5 +33,6 @@
   </span>
   <button class="btn btn--primary btn--block">Buy now</button>
   <a href="#" class="btn btn--secondary btn--block">Buy now</a>
+  <input type="text" class="input" placeholder="Enter domain name here">
   </body>
 </html>
