--- a/index.html
+++ b/index.html
@@ -14,25 +14,28 @@
     <link rel="stylesheet" href="css/styles.css" />
   </head>
   <body>
-  <a href="#" class="Link-arrow">Learn More</a>
-  <span class="badge badge--primary badge--small">10% Off</span>
-  <ul class="list list--inline">
-    <li class="list--item">Item 1</li>
-    <li class="list--item">Item 2</li>
-    <li class="list--item">Item 3</li>
-  </ul>
-  <ul class="list list--tick">
-    <li class="list--item">Item 1</li>
-    <li class="list--item">Item 2</li>
-    <li class="list--item">Item 3</li>
-  </ul>
-  <span class="icon-container">
-    <svg class="icon icon--primary">
-      <use xlink:href="images/sprite.svg#computer"></use>
-    </svg>
-  </span>
-  <button class="btn btn--primary btn--block">Buy now</button>
-  <a href="#" class="btn btn--secondary btn--block">Buy now</a>
-  <input type="text" class="input" placeholder="Enter domain name here">
+    <a href="#" class="Link-arrow">Learn More</a>
+    <span class="badge badge--primary badge--small">10% Off</span>
+    <ul class="list list--inline">
+      <li class="list--item">Item 1</li>
+      <li class="list--item">Item 2</li>
+      <li class="list--item">Item 3</li>
+    </ul>
+    <ul class="list list--tick">
+      <li class="list--item">Item 1</li>
+      <li class="list--item">Item 2</li>
+      <li class="list--item">Item 3</li>
+    </ul>
+    <span class="icon-container">
+      <svg class="icon icon--primary">
+        <use xlink:href="images/sprite.svg#computer"></use>
+      </svg>
+    </span>
+    <button class="btn btn--primary btn--block">Buy now</button>
+    <a href="#" class="btn btn--secondary btn--block">Buy now</a>
+    <div class="input-group">
+      <input type="text" class="input" placeholder="Enter domain name here" />
+      <button class="btn btn--accent">Search</button>
+    </div>
   </body>
 </html>
