--- a/index.html
+++ b/index.html
@@ -37,5 +37,13 @@
       <input type="text" class="input" placeholder="Enter domain name here" />
       <button class="btn btn--accent">Search</button>
     </div>
+    <div style="width:30%; padding:4rem">
+      <div class="card card--primary">
+        <header class="card--header">Card Title</header>
+        <div class="card--body">
+          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fuga, natus?
+        </div>
+    </div>
+    </div>
   </body>
 </html>
