--- a/index.html
+++ b/index.html
@@ -37,8 +37,9 @@
       <input type="text" class="input" placeholder="Enter domain name here" />
       <button class="btn btn--accent">Search</button>
     </div>
-    <div class="plan">
-      <div style="width: 50%; padding: 4rem">
+
+    <div style="width: 50%; padding: 4rem">
+      <div class="plan plan--popular">
         <div class="card card--secondary">
           <header class="card__header">
             <h3 class="plan__name">Entry</h3>
@@ -47,6 +48,7 @@
             <span class="badge badge--secondary badge--small">10% OFF</span>
             <span class="plan__description">Easy start on the cloud</span>
           </header>
+
           <div class="card__body">
             <ul class="list list--tick">
               <li class="list--item">Unlimited Websites</li>
