--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="css/normalize.css/normalize.css" />
     <link rel="stylesheet" href="css/styles.css" />
   </head>
-  <body>
+  <body style="padding: 5rem">
     <a href="#" class="Link-arrow">Learn More</a>
     <span class="badge badge--primary badge--small">10% Off</span>
     <ul class="list list--inline">
@@ -91,23 +91,53 @@
           </div>
           <div class="media__body">
             <h3 class="media__title quote__author">John Smith</h3>
-            <p class="quote__organization">
-              ABC Company
-            </p>
+            <p class="quote__organization">ABC Company</p>
           </div>
         </div>
       </footer>
     </blockquote>
-     <!-- "1*2 is equal to cols-2 " -->
-     <div class="grid grid--cols-2">
-      <div style="height: 100px; background: gold;"></div>
-      <div style="height: 100px; background: dodgerblue;"></div>
-     </div>
-     
-     <!-- <div class="grid grid--cols-3">
+    <!-- "1*2 is equal to cols-2 " -->
+    <div class="grid grid--cols-2">
+      <div style="height: 100px; background: gold"></div>
+      <div style="height: 100px; background: dodgerblue"></div>
+    </div>
+
+    <!-- <div class="grid grid--cols-3">
       <div style="height: 100px; background: gold;"></div>
       <div style="height: 100px; background: dodgerblue;"></div>
       <div style="height: 100px; background:tomato;"></div>
      </div> -->
+    <div class="card testimonial">
+      <div class="grid grid--cols-2">
+        <div class="testimonial__image">
+          <img src="images/testimonial.jpg" alt="A happy ,smiling customer" />
+          <span class="icon-container icon-container--accent">
+            <svg class="icon icon--primary icon--small icon--white">
+              <use xlink:href="images/sprite.svg#quotes"></use>
+            </svg>
+          </span>
+        </div>
+        <blockquote class="quote">
+          <p class="quote__text">
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Saepe quia
+            distinctio ducimus, quos voluptatibus sequi! Hic nobis temporibus
+            sit ut!
+          </p>
+          <footer>
+            <div class="media">
+              <div class="media__image">
+                <svg class="icon icon--primary quote__line">
+                  <use xlink:href="images/sprite.svg#line"></use>
+                </svg>
+              </div>
+              <div class="media__body">
+                <h3 class="media__title quote__author">John Smith</h3>
+                <p class="quote__organization">ABC Company</p>
+              </div>
+            </div>
+          </footer>
+        </blockquote>
+      </div>
+    </div>
   </body>
 </html>
