Define callout component.

--- a/index.html
+++ b/index.html
@@ -139,5 +139,18 @@
         </blockquote>
       </div>
     </div>
+    <div class="callout callout--primary">
+      <div class="grid grid--cols-2">
+        <div class="callout__content">
+          <h2 class="callout__heading">Ready to Get Started?</h2>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum
+            sapiente perspiciatis quos atque soluta voluptatibus recusandae
+            dignissimos eius cum adipisci?
+          </p>
+        </div>
+        <a href="" class="btn btn--secondary btn--stretched">Gets Started</a>
+      </div>
+    </div>
   </body>
 </html>
