--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
     <link rel="stylesheet" href="css/styles.css" />
   </head>
   <body style="padding: 5rem">
+    
+    </section>
     <a href="#" class="Link-arrow">Learn More</a>
     <span class="badge badge--primary badge--small">10% Off</span>
     <ul class="list list--inline">
@@ -175,7 +177,34 @@
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati, non?
       </div>
     </div>
-   
+    <section class="block container">
+      <header class="block__header">
+        <h2 class="block__heading">Heading</h2>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto,
+          nulla!
+        </p>
+      </header>
+      <div style="width:30%; padding:4rem">
+        <div class="card card--primary">
+          <header class="card__header">Card Title</header>
+          <div class="card__body">
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fuga, natus?
+          </div>
+      </div>
+      </div>
+      </section>
+    <section class="block block--dark block--skewed-left">
+      <div class="container">
+        <header class="block__header">
+          <h2 class="block__heading">Heading</h2>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto,
+            nulla!
+          </p>
+        </header>
+        
+      </section>
     <script src="js/main.js"></script>
   </body>
 </html>
