--- a/index.html
+++ b/index.html
@@ -403,8 +403,8 @@
         <source type="image/png" srcset="images/ipad.png 1x, images/ipad@2x.png 2x"/>
         <img  src="images/ipad.png" alt=""/>
       </picture>
-        <ul>
-          <li class="list">
+        <ul class="list">
+          <li >
             <div class="media">
               <div class="media__image">
                 <svg class="icon icon--primary">
@@ -421,7 +421,7 @@
               </div>
             </div>
           </li>
-          <li class="list">
+          <li>
             <div class="media">
               <div class="media__image">
                 <svg class="icon icon--primary">
@@ -438,7 +438,7 @@
               </div>
             </div>
           </li>
-          <li class="list">
+          <li>
             <div class="media">
               <div class="media__image">
                 <svg class="icon icon--primary">
@@ -500,6 +500,75 @@
         
       </div>
     </section>
+    <footer class="block block--dark footer">
+      <div class="container grid footer__sections">
+        <section class="collapsible collapsible--expanded footer__section">
+          <header class="collapsible__header">
+            <h2 class="collapsible__heading footer__heading">Products</h2>
+            <svg class="icon icon--white collapsible__chevron">
+              <use xlink:href="images/sprite.svg#chevron"></use>
+            </svg>
+          </header>
+          <div class="collapsible__content">
+           <ul class="list">
+            <li><a href="#">Website Hosting</a></li>
+            <li><a href="#">Free Automated</a></li>
+            <li><a href="#">Wordpress</a></li>
+            <li><a href="#">Migrations</a></li>
+           </ul>
+          </div>
+        </section>
+        <section class="collapsible footer__section ">
+          <header class="collapsible__header">
+            <h2 class="collapsible__heading footer__heading">Company</h2>
+            <svg class="icon icon--white collapsible__chevron">
+              <use xlink:href="images/sprite.svg#chevron"></use>
+            </svg>
+          </header>
+          <div class="collapsible__content">
+            <ul class="list">
+              <li><a href="#">About</a></li>
+              <li><a href="#">Affiliates</a></li>
+              <li><a href="#">Blog</a></li>
+             </ul>
+          </div>
+        </section>
+        <section class="collapsible footer__section ">
+          <header class="collapsible__header">
+            <h2 class="collapsible__heading footer__heading">support</h2>
+            <svg class="icon icon--white collapsible__chevron">
+              <use xlink:href="images/sprite.svg#chevron"></use>
+            </svg>
+          </header>
+          <div class="collapsible__content">
+            <ul class="list">
+              <li><a href="#">Contact</a></li>
+              <li><a href="#">Knowledge Base</a></li>
+              <li><a href="#">FAQ</a></li>
+             </ul>
+          </div>
+        </section>
+        <section class="collapsible footer__section ">
+          <header class="collapsible__header">
+            <h2 class="collapsible__heading footer__heading">Domains</h2>
+            <svg class="icon icon--white collapsible__chevron">
+              <use xlink:href="images/sprite.svg#chevron"></use>
+            </svg>
+          </header>
+          <div class="collapsible__content">
+            <ul class="list">
+              <li><a href="#">Domain checker</a></li>
+              <li><a href="#">Domain Transfer</a></li>
+              <li><a href="#">Free Domain</a></li>
+             </ul>
+          </div>
+        </section>
+        <section class="footer__brand">
+          <img src="images/logo.svg" alt="">
+          <p class="foote__copyright">Copyright 2020 Mosh Hamedani</p>
+        </section>
+       </div>
+    </footer>
     <script src="js/main.js"></script>
   </body>
 </html>
