--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <title>Moshify-Go Online for Just $9</title>
     <meta property="og:title" content="Moshify ...">
     <meta property="og:description" content="Moshify ...">
-    <meta property="og:type" content="http://">
-    <meta property="og:type" content="http://moshified.com">
-    <meta property="og:url" content="website">
+    <meta property="og:type" content="website">
+    <meta property="og:image" content="http://">
+    <meta property="og:url" content="http://moshified">
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
