validate html & css

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zxx">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -39,7 +39,9 @@
     <section class="block block--dark block--skewed-left hero">
       <div class="container grid grid--cols-2">
         <header class="block__header hero__content">
-          <h1 data-aos="fade-right" class="block__heading">Cloud Hosting for Pros</h1>
+          <h1 data-aos="fade-right" class="block__heading">
+            Cloud Hosting for Pros
+          </h1>
           <p class="hero__tagline">
             Deploy your websites in less than 60 seconds
           </p>
@@ -58,7 +60,7 @@
         </picture>
       </div>
     </section>
-    <section data-aos="fade-up" class="block container block-domain" >
+    <section data-aos="fade-up" class="block container block-domain">
       <header class="block__header">
         <h2>Starting at 9$ per month</h2>
         <p>
@@ -270,7 +272,7 @@
         <h2>User-friendly Control Panel</h2>
       </header>
       <div class="container grid grid--cols-2">
-        <picture  data-aos="fade-right" class="block-showcase__image">
+        <picture data-aos="fade-right" class="block-showcase__image">
           <source
             type="image/webp"
             srcset="images/ipad.webp 1x, images/ipad@2x.webp 2x"
@@ -382,7 +384,7 @@
         </div>
       </div>
     </section>
-    <div class=" container callout callout--primary callout-signup">
+    <div class="container callout callout--primary callout-signup">
       <div class="grid grid--cols-2">
         <div class="callout__content">
           <h2 class="callout__heading">Ready to Get Started?</h2>
@@ -396,74 +398,74 @@
       </div>
     </div>
     <footer class="block block--dark footer">
-        <div class="container grid footer__sections">
-          <section class="collapsible collapsible--expanded footer__section">
-            <header class="collapsible__header">
-              <h2 class="collapsible__heading footer__heading">Products</h2>
-              <svg class="icon icon--white collapsible__chevron">
-                <use xlink:href="images/sprite.svg#chevron"></use>
-              </svg>
-            </header>
-            <div class="collapsible__content">
-             <ul class="list">
+      <div class="container grid footer__sections">
+        <section class="collapsible collapsible--expanded footer__section">
+          <div class="collapsible__header">
+            <h2 class="collapsible__heading footer__heading">Products</h2>
+            <svg class="icon icon--white collapsible__chevron">
+              <use xlink:href="images/sprite.svg#chevron"></use>
+            </svg>
+          </div>
+          <div class="collapsible__content">
+            <ul class="list">
               <li><a href="#">Website Hosting</a></li>
               <li><a href="#">Free Automated</a></li>
               <li><a href="#">Wordpress</a></li>
               <li><a href="#">Migrations</a></li>
-             </ul>
-            </div>
-          </section>
-          <section class="collapsible footer__section ">
-            <header class="collapsible__header">
-              <h2 class="collapsible__heading footer__heading">Company</h2>
-              <svg class="icon icon--white collapsible__chevron">
-                <use xlink:href="images/sprite.svg#chevron"></use>
-              </svg>
-            </header>
-            <div class="collapsible__content">
-              <ul class="list">
-                <li><a href="#">About</a></li>
-                <li><a href="#">Affiliates</a></li>
-                <li><a href="#">Blog</a></li>
-               </ul>
-            </div>
-          </section>
-          <section class="collapsible footer__section ">
-            <header class="collapsible__header">
-              <h2 class="collapsible__heading footer__heading">support</h2>
-              <svg class="icon icon--white collapsible__chevron">
-                <use xlink:href="images/sprite.svg#chevron"></use>
-              </svg>
-            </header>
-            <div class="collapsible__content">
-              <ul class="list">
-                <li><a href="#">Contact</a></li>
-                <li><a href="#">Knowledge Base</a></li>
-                <li><a href="#">FAQ</a></li>
-               </ul>
-            </div>
-          </section>
-          <section class="collapsible footer__section ">
-            <header class="collapsible__header">
-              <h2 class="collapsible__heading footer__heading">Domains</h2>
-              <svg class="icon icon--white collapsible__chevron">
-                <use xlink:href="images/sprite.svg#chevron"></use>
-              </svg>
-            </header>
-            <div class="collapsible__content">
-              <ul class="list">
-                <li><a href="#">Domain checker</a></li>
-                <li><a href="#">Domain Transfer</a></li>
-                <li><a href="#">Free Domain</a></li>
-               </ul>
-            </div>
-          </section>
-          <section class="footer__brand">
-            <img src="images/logo.svg" alt="">
-            <p class="foote__copyright">Copyright 2020 Mosh Hamedani</p>
-          </section>
-         </div>
-      </footer>
+            </ul>
+          </div>
+        </section>
+        <section class="collapsible footer__section">
+          <div class="collapsible__header">
+            <h2 class="collapsible__heading footer__heading">Company</h2>
+            <svg class="icon icon--white collapsible__chevron">
+              <use xlink:href="images/sprite.svg#chevron"></use>
+            </svg>
+          </div>
+          <div class="collapsible__content">
+            <ul class="list">
+              <li><a href="#">About</a></li>
+              <li><a href="#">Affiliates</a></li>
+              <li><a href="#">Blog</a></li>
+            </ul>
+          </div>
+        </section>
+        <section class="collapsible footer__section">
+          <div class="collapsible__header">
+            <h2 class="collapsible__heading footer__heading">support</h2>
+            <svg class="icon icon--white collapsible__chevron">
+              <use xlink:href="images/sprite.svg#chevron"></use>
+            </svg>
+          </div>
+          <div class="collapsible__content">
+            <ul class="list">
+              <li><a href="#">Contact</a></li>
+              <li><a href="#">Knowledge Base</a></li>
+              <li><a href="#">FAQ</a></li>
+            </ul>
+          </div>
+        </section>
+        <section class="collapsible footer__section">
+          <div class="collapsible__header">
+            <h2 class="collapsible__heading footer__heading">Domains</h2>
+            <svg class="icon icon--white collapsible__chevron">
+              <use xlink:href="images/sprite.svg#chevron"></use>
+            </svg>
+          </div>
+          <div class="collapsible__content">
+            <ul class="list">
+              <li><a href="#">Domain checker</a></li>
+              <li><a href="#">Domain Transfer</a></li>
+              <li><a href="#">Free Domain</a></li>
+            </ul>
+          </div>
+        </section>
+        <div class="footer__brand">
+          <img src="images/logo.svg" alt="" />
+          <p class="foote__copyright">Copyright 2020 Mosh Hamedani</p>
+        </div>
+      </div>
+    </footer>
 
     <script src="js/main.js"></script>
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
