site s performance changes

--- a/index.html
+++ b/index.html
@@ -19,13 +19,15 @@
       href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="css/normalize.css/normalize.css" />
+
     <link rel="stylesheet" href="css/styles.css" />
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
   </head>
   <body>
     <nav class="nav collapsible">
-      <a class="nav__brand" href="/"><img src="images/logo.svg" alt="" /></a>
+      <a aria-label="Moshify" class="nav__brand" href="/"
+        ><img src="images/logo.svg" alt=""
+      /></a>
       <svg class="icon icon--white nav__toggler">
         <use :href="images/sprite.svg#menu"></use>
       </svg>
@@ -69,7 +71,12 @@
         </p>
       </header>
       <div class="input-group">
-        <input type="text" class="input" placeholder="Enter domain name here" />
+        <input
+          aria-label="Domain"
+          type="text"
+          class="input"
+          placeholder="Enter domain name here"
+        />
         <button class="btn btn--accent">
           <svg class="icon icon--white">
             <use :href="images/sprite.svg#search"></use>
@@ -351,7 +358,7 @@
           <div class="grid grid--cols-2">
             <div class="testimonial__image">
               <img
-                src="images/testimonial.jpg"
+                src="images/testimonial.webp"
                 alt="A happy ,smiling customer"
               />
               <span class="icon-container icon-container--accent">
